--- a/docQA/uploader/static/uploader/css/style.css
+++ b/docQA/uploader/static/uploader/css/style.css
@@ -91,3 +91,19 @@ h1, h2 {
     color: #721c24;
     margin-bottom: 15px;
 }
+
+
+.btn-reset {
+    padding: 10px 20px;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+.btn-reset:hover {
+    background-color: #c82333;
+}
